fix alignment of tags

--- a/components/list/list.css
+++ b/components/list/list.css
@@ -5,7 +5,6 @@
 .list--inline > li {
   display: inline-block;
   margin: 0 0 0 1em;
-  vertical-align: top;
 }
 .list--inline > li:last-child {
   margin-right: 0;
