--- a/components/tag/tag.css
+++ b/components/tag/tag.css
@@ -26,7 +26,6 @@
   font-size: 1rem;
   appearance: none;
   background-color: var(--ui--action);
-  padding: .25rem 1rem .5rem 1rem;
 }
 
 .tag:hover {
